Name:                cryptonite-conduit
Version:             0.1
Synopsis:            cryptonite conduit
Description:
  Support the former @cryptohash@ package, now using @cryptonite@,
  using conduits from the @conduit@ package.
License:             BSD3
License-file:        LICENSE
Copyright:           Vincent Hanquez <vincent@snarc.org>
Author:              Vincent Hanquez <vincent@snarc.org>
Maintainer:          vincent@snarc.org
Category:            Cryptography, Conduit
Stability:           experimental
Build-Type:          Simple
Homepage:            https://github.com/haskell-crypto/cryptonite-conduit
Cabal-Version:       >=1.8
Extra-source-files:  README.md

Library
  Exposed-modules:   Crypto.Hash.Conduit
  Build-depends:     base >= 4 && < 5
                   , bytestring
                   , conduit
                   , resourcet
                   , conduit-extra
                   , cryptonite
                   , transformers
  ghc-options:       -Wall -fwarn-tabs

source-repository head
  type: git
  location: https://github.com/haskell-crypto/cryptonite-conduit
